# backend

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-ci.yml
app/: main.py
app/api/: __init__.py  achievements.py  employees.py
app/auth/: utils.py
app/core/: config.py  db.py  dependencies.py
app/schemas/: achievement.py  employee.py
backend/: .env.dist  Dockerfile  main.py  pyproject.toml
backend/api/: achievements.py  deps.py
backend/api/routes/: achievements.py  auth.py  employees.py  exchanges.py
backend/core/: config.py  db.py
backend/schemas/: exchanges.py
frontend/: .env.example  CLAUDE.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  app.html  index.css
frontend/src/components/: Dashboard.tsx  TelegramLoginButton.tsx
frontend/src/components/dashboard-01/components/: app-sidebar.tsx  section-cards.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: auth.ts  utils.ts
frontend/src/lib/api/: employees.ts  health.ts
frontend/src/lib/components/: app-sidebar.svelte  dashboard-layout.svelte  data-table-column-header.svelte  data-table.svelte  employees-columns.ts  login-form.svelte  nav-main.svelte  nav-user.svelte  telegram-links.svelte
frontend/src/lib/components/ui/: button.svelte  card-content.svelte  card-description.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts
frontend/src/lib/stores/: auth.ts  breadcrumbs.ts
frontend/src/routes/: +layout.svelte  +page.svelte  Footer.svelte  Header.svelte
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/employees/: +page.svelte
frontend/src/routes/dashboard/game/: +page.svelte
frontend/src/routes/dashboard/game/achievements/: +page.svelte
frontend/src/routes/dashboard/game/items/: +page.svelte
frontend/src/routes/dashboard/game/transactions/: +page.svelte
frontend/src/routes/dashboard/settings/: +page.svelte
frontend/src/scripts/: auth.tsx
