[project]
name = "adminer-api"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authx>=1.4.3",
    "environs>=14.5.0",
    "fastapi[standard]>=0.123.5",
    "pydantic-settings>=2.12.0",
    "stp-database",
    "urllib3>=2.5.0",
]

[tool.uv.sources]
stp-database = { git = "https://github.com/STP-Team/stp-database" }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]